syntax = "proto3";

package order;

service OrderService {
  rpc FindAll (Empty) returns (OrdersResponse);
  rpc FindOne (FindOneRequest) returns (OrderResponse);
  rpc FindByUser (FindByUserRequest) returns (OrdersResponse);
  rpc Create (CreateOrderRequest) returns (OrderResponse);
  rpc UpdateStatus (UpdateStatusRequest) returns (OrderResponse);
  rpc Remove (RemoveRequest) returns (OrderResponse);
}

message Empty {}

message FindOneRequest {
  int32 id = 1;
}

message FindByUserRequest {
  int32 userId = 1;
}

message CreateOrderRequest {
  int32 userId = 1;
  repeated OrderItemInput items = 2;
}

message OrderItemInput {
  int32 productId = 1;
  int32 quantity = 2;
}

message UpdateStatusRequest {
  int32 id = 1;
  string status = 2;
}

message RemoveRequest {
  int32 id = 1;
}

message OrderResponse {
  int32 id = 1;
  int32 userId = 2;
  UserResponse user = 3;
  string status = 4;
  double total = 5;
  repeated OrderItemResponse orderItems = 6;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message OrderItemResponse {
  int32 id = 1;
  int32 orderId = 2;
  int32 productId = 3;
  ProductResponse product = 4;
  int32 quantity = 5;
  double price = 6;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  optional string description = 3;
  double price = 4;
  int32 stock = 5;
}

message OrdersResponse {
  repeated OrderResponse orders = 1;
}
